--- a/app/src/main/res/layout/dialog_bottom_reply.xml
+++ b/app/src/main/res/layout/dialog_bottom_reply.xml
@@ -41,4 +41,23 @@
             android:textStyle="bold"
             android:layout_marginLeft="24dp"/>
     </LinearLayout>
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="72dp"
+        app:layout_constraintTop_toBottomOf="@+id/ll_reply"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/ll_delete">
+        <ImageView android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_action_delete"
+            android:layout_marginLeft="24dp"/>
+        <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:text="@string/delete_comment"
+            android:layout_gravity="center_vertical"
+            android:textStyle="bold"
+            android:layout_marginLeft="24dp" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
