--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -74,7 +74,7 @@
             android:layout_marginEnd="24dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_comment_content"
             android:layout_marginTop="8dp"
-            android:id="@+id/tv_look_conversion"
+            android:id="@+id/tv_look_conversation"
             android:text="查看对话"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
