--- a/app/src/main/res/layout/fragment_home_recommend.xml
+++ b/app/src/main/res/layout/fragment_home_recommend.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tab_title_recommendation"/>
+    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView_recommend"/>
 </android.support.constraint.ConstraintLayout>
